# work_level_classifier

./: .gitignore  Dockerfile  README.md  app.py  app_utils.py  docker-compose.yml  postgres.py  pyproject.toml  requirements.txt  train_model.py  utils.py
classifier/: app.py  app_utils.py  constants.py  docker_postgres_init.sql  postgres.py  train_model.py  utils.py
models/: regexp_pattern.json
notebooks/: DaData_token.py  OfData_token.py  adding_data_to_GSMP.py  career_visio.py  eda.ipynb  ml maxtrix.ipynb  ml.ipynb  ml2features.ipynb  ml_chain_model.ipynb  ml_faiss.ipynb  ml_faiss_new_inn.ipynb  ml_faiss_work_names.ipynb  ml_re.ipynb  regexp.py  requirements.txt
