[tool.poetry]
name = "work-level-classifier"
version = "0.1.0"
description = ""
authors = ["Vadim"]
readme = "README.md"
packages = [
    { include = "classifier" },
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
pandas = "^2.2.2"
tqdm = "^4.66.4"
torch = "^2.3.1"
transformers = "^4.42.3"
matplotlib = "^3.9.0"
psycopg2-binary = "^2.9.9"
plotly = "^5.22.0"
dadata = "^21.10.1"
streamlit = "^1.36.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
